update tests for new `reg_escape_weight`

--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -22,11 +22,11 @@
    "id": "7f2bd96d-b693-4a82-856c-edf6a85ec89a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-13T18:50:15.647052Z",
-     "iopub.status.busy": "2022-11-13T18:50:15.646811Z",
-     "iopub.status.idle": "2022-11-13T18:50:17.110483Z",
-     "shell.execute_reply": "2022-11-13T18:50:17.109735Z",
-     "shell.execute_reply.started": "2022-11-13T18:50:15.646976Z"
+     "iopub.execute_input": "2023-02-21T18:54:06.810771Z",
+     "iopub.status.busy": "2023-02-21T18:54:06.810533Z",
+     "iopub.status.idle": "2023-02-21T18:54:08.471460Z",
+     "shell.execute_reply": "2023-02-21T18:54:08.470673Z",
+     "shell.execute_reply.started": "2023-02-21T18:54:06.810748Z"
     },
     "tags": []
    },
@@ -56,11 +56,11 @@
    "id": "a212ce8e-b374-4cbb-9bd1-e6543972b4e6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-13T18:50:17.114169Z",
-     "iopub.status.busy": "2022-11-13T18:50:17.113958Z",
-     "iopub.status.idle": "2022-11-13T18:50:17.320490Z",
-     "shell.execute_reply": "2022-11-13T18:50:17.319718Z",
-     "shell.execute_reply.started": "2022-11-13T18:50:17.114142Z"
+     "iopub.execute_input": "2023-02-21T18:54:08.475102Z",
+     "iopub.status.busy": "2023-02-21T18:54:08.474877Z",
+     "iopub.status.idle": "2023-02-21T18:54:09.092826Z",
+     "shell.execute_reply": "2023-02-21T18:54:09.092112Z",
+     "shell.execute_reply.started": "2023-02-21T18:54:08.475082Z"
     },
     "tags": []
    },
@@ -111,7 +111,7 @@
     "    ),\n",
     "    data_mut_escape_overlap=\"fill_to_data\",\n",
     ")\n",
-    "polyclonal_data.fit(reg_uniqueness2_weight=0)\n",
+    "polyclonal_data.fit(reg_uniqueness2_weight=0, reg_escape_weight=0.01)\n",
     "# Now only use the first 30 elements to get rid of some mutations\n",
     "polyclonal_data2 = Polyclonal(\n",
     "    data_to_fit=data_to_fit.head(20),\n",
@@ -138,11 +138,11 @@
    "id": "a92c97a0-6447-4655-bdd6-49301f98f11b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-13T18:50:17.324628Z",
-     "iopub.status.busy": "2022-11-13T18:50:17.324403Z",
-     "iopub.status.idle": "2022-11-13T18:50:17.345195Z",
-     "shell.execute_reply": "2022-11-13T18:50:17.344564Z",
-     "shell.execute_reply.started": "2022-11-13T18:50:17.324606Z"
+     "iopub.execute_input": "2023-02-21T18:54:09.095563Z",
+     "iopub.status.busy": "2023-02-21T18:54:09.095362Z",
+     "iopub.status.idle": "2023-02-21T18:54:09.111798Z",
+     "shell.execute_reply": "2023-02-21T18:54:09.111109Z",
+     "shell.execute_reply.started": "2023-02-21T18:54:09.095546Z"
     },
     "tags": []
    },
@@ -174,11 +174,11 @@
    "id": "04a1937a-9241-4f24-91c5-b5513e042002",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-13T18:50:17.348162Z",
-     "iopub.status.busy": "2022-11-13T18:50:17.347944Z",
-     "iopub.status.idle": "2022-11-13T18:50:17.501309Z",
-     "shell.execute_reply": "2022-11-13T18:50:17.499878Z",
-     "shell.execute_reply.started": "2022-11-13T18:50:17.348141Z"
+     "iopub.execute_input": "2023-02-21T18:54:09.115812Z",
+     "iopub.status.busy": "2023-02-21T18:54:09.115548Z",
+     "iopub.status.idle": "2023-02-21T18:54:09.315965Z",
+     "shell.execute_reply": "2023-02-21T18:54:09.314641Z",
+     "shell.execute_reply.started": "2023-02-21T18:54:09.115795Z"
     },
     "tags": []
    },
@@ -216,11 +216,11 @@
    "id": "3ce1356d-9c5d-4b83-85d1-c2c2cdd0b8fb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-13T18:50:17.506204Z",
-     "iopub.status.busy": "2022-11-13T18:50:17.505977Z",
-     "iopub.status.idle": "2022-11-13T18:50:17.644322Z",
-     "shell.execute_reply": "2022-11-13T18:50:17.643342Z",
-     "shell.execute_reply.started": "2022-11-13T18:50:17.506177Z"
+     "iopub.execute_input": "2023-02-21T18:54:09.320179Z",
+     "iopub.status.busy": "2023-02-21T18:54:09.319868Z",
+     "iopub.status.idle": "2023-02-21T18:54:09.463187Z",
+     "shell.execute_reply": "2023-02-21T18:54:09.461934Z",
+     "shell.execute_reply.started": "2023-02-21T18:54:09.320151Z"
     },
     "tags": []
    },
@@ -241,11 +241,11 @@
    "id": "781ad89f-9e61-4708-81d8-91fc89f2ed25",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-13T18:50:17.648467Z",
-     "iopub.status.busy": "2022-11-13T18:50:17.648271Z",
-     "iopub.status.idle": "2022-11-13T18:50:17.788023Z",
-     "shell.execute_reply": "2022-11-13T18:50:17.786846Z",
-     "shell.execute_reply.started": "2022-11-13T18:50:17.648437Z"
+     "iopub.execute_input": "2023-02-21T18:54:09.468958Z",
+     "iopub.status.busy": "2023-02-21T18:54:09.468440Z",
+     "iopub.status.idle": "2023-02-21T18:54:09.617547Z",
+     "shell.execute_reply": "2023-02-21T18:54:09.616230Z",
+     "shell.execute_reply.started": "2023-02-21T18:54:09.468893Z"
     },
     "tags": []
    },
@@ -274,11 +274,11 @@
    "id": "c6185dc5-6d1a-4975-92b2-5cd7fd6c6b58",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-13T18:50:17.792527Z",
-     "iopub.status.busy": "2022-11-13T18:50:17.792231Z",
-     "iopub.status.idle": "2022-11-13T18:50:18.207813Z",
-     "shell.execute_reply": "2022-11-13T18:50:18.206515Z",
-     "shell.execute_reply.started": "2022-11-13T18:50:17.792500Z"
+     "iopub.execute_input": "2023-02-21T18:54:09.621844Z",
+     "iopub.status.busy": "2023-02-21T18:54:09.621590Z",
+     "iopub.status.idle": "2023-02-21T18:54:10.480576Z",
+     "shell.execute_reply": "2023-02-21T18:54:10.478927Z",
+     "shell.execute_reply.started": "2023-02-21T18:54:09.621811Z"
     },
     "tags": []
    },
@@ -294,11 +294,11 @@
    "id": "191a9185-f1d3-4271-8116-fd0a47b788ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-13T18:50:18.212135Z",
-     "iopub.status.busy": "2022-11-13T18:50:18.211934Z",
-     "iopub.status.idle": "2022-11-13T18:50:18.678061Z",
-     "shell.execute_reply": "2022-11-13T18:50:18.677327Z",
-     "shell.execute_reply.started": "2022-11-13T18:50:18.212108Z"
+     "iopub.execute_input": "2023-02-21T18:54:10.486193Z",
+     "iopub.status.busy": "2023-02-21T18:54:10.485843Z",
+     "iopub.status.idle": "2023-02-21T18:54:11.154879Z",
+     "shell.execute_reply": "2023-02-21T18:54:11.153650Z",
+     "shell.execute_reply.started": "2023-02-21T18:54:10.486152Z"
     },
     "tags": []
    },
@@ -333,11 +333,11 @@
    "id": "1b73d334-a4f0-4dc6-b636-6c179930dd74",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-13T18:50:18.681683Z",
-     "iopub.status.busy": "2022-11-13T18:50:18.681453Z",
-     "iopub.status.idle": "2022-11-13T18:50:18.781067Z",
-     "shell.execute_reply": "2022-11-13T18:50:18.780355Z",
-     "shell.execute_reply.started": "2022-11-13T18:50:18.681655Z"
+     "iopub.execute_input": "2023-02-21T18:54:11.160306Z",
+     "iopub.status.busy": "2023-02-21T18:54:11.159962Z",
+     "iopub.status.idle": "2023-02-21T18:54:11.254958Z",
+     "shell.execute_reply": "2023-02-21T18:54:11.254140Z",
+     "shell.execute_reply.started": "2023-02-21T18:54:11.160278Z"
     },
     "tags": []
    },
@@ -356,11 +356,11 @@
    "id": "5728896f-1b6d-4c01-85b1-59eff469e05e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-13T18:50:18.782300Z",
-     "iopub.status.busy": "2022-11-13T18:50:18.781994Z",
-     "iopub.status.idle": "2022-11-13T18:50:18.895164Z",
-     "shell.execute_reply": "2022-11-13T18:50:18.894105Z",
-     "shell.execute_reply.started": "2022-11-13T18:50:18.782277Z"
+     "iopub.execute_input": "2023-02-21T18:54:11.256225Z",
+     "iopub.status.busy": "2023-02-21T18:54:11.255928Z",
+     "iopub.status.idle": "2023-02-21T18:54:11.343879Z",
+     "shell.execute_reply": "2023-02-21T18:54:11.343132Z",
+     "shell.execute_reply.started": "2023-02-21T18:54:11.256208Z"
     },
     "tags": []
    },
@@ -389,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
