--- a/notebooks/fit_2epitope.ipynb
+++ b/notebooks/fit_2epitope.ipynb
@@ -1127,8 +1127,7 @@
     "\n",
     "# print the correlations\n",
     "(\n",
-    "    ic90s\n",
-    "    [[c for c in ic90s.columns if c.startswith(\"log\")]]\n",
+    "    ic90s[[c for c in ic90s.columns if c.startswith(\"log\")]]\n",
     "    .corr(numeric_only=True)\n",
     "    .round(2)\n",
     ")"
@@ -1298,15 +1297,16 @@
     "    # Sort so model with biggest average escape is first. This makes testing more\n",
     "    # robust as it is sort of random which epitope name gets assigned to biggest:\n",
     "    model_df = (\n",
-    "        m.mut_escape_df\n",
-    "        .assign(mean_escape=lambda x: x.groupby(\"epitope\")[\"escape\"].transform(\"mean\"))\n",
+    "        m.mut_escape_df.assign(\n",
+    "            mean_escape=lambda x: x.groupby(\"epitope\")[\"escape\"].transform(\"mean\")\n",
+    "        )\n",
     "        .sort_values(\"mean_escape\", ascending=False)\n",
     "        .pivot_table(index=\"mutation\", columns=\"epitope\", values=\"escape\", sort=False)\n",
     "        .reset_index()\n",
     "    )\n",
     "    model_df.columns = [\"mutation\", f\"{mname} epitope A\", f\"{mname} epitope B\"]\n",
     "    mut_escape = mut_escape.merge(model_df, on=\"mutation\", validate=\"one_to_one\")\n",
-    "    \n",
+    "\n",
     "mut_escape_corr = mut_escape.corr(numeric_only=True).round(2)\n",
     "\n",
     "mut_escape_corr"
@@ -1408,8 +1408,7 @@
     "# NBVAL_IGNORE_OUTPUT\n",
     "\n",
     "mut_escape_corr_tidy = (\n",
-    "    mut_escape_corr\n",
-    "    .reset_index(names=\"epitope_1\")\n",
+    "    mut_escape_corr.reset_index(names=\"epitope_1\")\n",
     "    .melt(id_vars=\"epitope_1\", var_name=\"epitope_2\", value_name=\"correlation\")\n",
     "    .query(\"epitope_1.str.startswith('true')\")\n",
     "    .query(\"not epitope_2.str.startswith('true')\")\n",
