--- a/notebooks/real_LyCoV1404.ipynb
+++ b/notebooks/real_LyCoV1404.ipynb
@@ -582,7 +582,8 @@
     ")\n",
     "\n",
     "_ = model.fit(\n",
-    "    logfreq=100, reg_escape_weight=reg_escape_weight,\n",
+    "    logfreq=100,\n",
+    "    reg_escape_weight=reg_escape_weight,\n",
     ")"
    ]
   },
