--- a/notebooks/fit_RBD.ipynb
+++ b/notebooks/fit_RBD.ipynb
@@ -1428,7 +1428,9 @@
     "\n",
     "# for testing since we nbval ignore cell output\n",
     "assert (\n",
-    "    numpy.allclose(corr[\"correlation (R^2)\"], numpy.array([0.58, 0.94, 0.95]), atol=0.02)\n",
+    "    numpy.allclose(\n",
+    "        corr[\"correlation (R^2)\"], numpy.array([0.58, 0.94, 0.95]), atol=0.02\n",
+    "    )\n",
     "    == True\n",
     ")\n",
     "\n",
