update notebooks to pass tests

--- a/notebooks/real_LyCoV1404.ipynb
+++ b/notebooks/real_LyCoV1404.ipynb
@@ -18,11 +18,11 @@
    "id": "0b46edd2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-21T21:22:07.831617Z",
-     "iopub.status.busy": "2023-02-21T21:22:07.831118Z",
-     "iopub.status.idle": "2023-02-21T21:22:12.262019Z",
-     "shell.execute_reply": "2023-02-21T21:22:12.261314Z",
-     "shell.execute_reply.started": "2023-02-21T21:22:07.831573Z"
+     "iopub.execute_input": "2023-02-22T18:04:07.552288Z",
+     "iopub.status.busy": "2023-02-22T18:04:07.552048Z",
+     "iopub.status.idle": "2023-02-22T18:04:19.494266Z",
+     "shell.execute_reply": "2023-02-22T18:04:19.493289Z",
+     "shell.execute_reply.started": "2023-02-22T18:04:07.552262Z"
     },
     "tags": []
    },
@@ -53,11 +53,11 @@
    "id": "46127941",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-21T21:22:12.263660Z",
-     "iopub.status.busy": "2023-02-21T21:22:12.263272Z",
-     "iopub.status.idle": "2023-02-21T21:22:12.906209Z",
-     "shell.execute_reply": "2023-02-21T21:22:12.905635Z",
-     "shell.execute_reply.started": "2023-02-21T21:22:12.263639Z"
+     "iopub.execute_input": "2023-02-22T18:04:19.497436Z",
+     "iopub.status.busy": "2023-02-22T18:04:19.497265Z",
+     "iopub.status.idle": "2023-02-22T18:04:27.345047Z",
+     "shell.execute_reply": "2023-02-22T18:04:27.344276Z",
+     "shell.execute_reply.started": "2023-02-22T18:04:19.497411Z"
     },
     "tags": []
    },
@@ -227,11 +227,11 @@
    "id": "ad21ccc1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-21T21:22:12.907283Z",
-     "iopub.status.busy": "2023-02-21T21:22:12.906975Z",
-     "iopub.status.idle": "2023-02-21T21:22:13.064102Z",
-     "shell.execute_reply": "2023-02-21T21:22:13.063304Z",
-     "shell.execute_reply.started": "2023-02-21T21:22:12.907261Z"
+     "iopub.execute_input": "2023-02-22T18:04:27.348803Z",
+     "iopub.status.busy": "2023-02-22T18:04:27.348542Z",
+     "iopub.status.idle": "2023-02-22T18:04:27.510630Z",
+     "shell.execute_reply": "2023-02-22T18:04:27.509861Z",
+     "shell.execute_reply.started": "2023-02-22T18:04:27.348781Z"
     },
     "tags": []
    },
@@ -356,11 +356,11 @@
    "id": "2646efb0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-21T21:22:13.066169Z",
-     "iopub.status.busy": "2023-02-21T21:22:13.065514Z",
-     "iopub.status.idle": "2023-02-21T21:22:13.273644Z",
-     "shell.execute_reply": "2023-02-21T21:22:13.273028Z",
-     "shell.execute_reply.started": "2023-02-21T21:22:13.066128Z"
+     "iopub.execute_input": "2023-02-22T18:04:27.515448Z",
+     "iopub.status.busy": "2023-02-22T18:04:27.515154Z",
+     "iopub.status.idle": "2023-02-22T18:04:27.733861Z",
+     "shell.execute_reply": "2023-02-22T18:04:27.733130Z",
+     "shell.execute_reply.started": "2023-02-22T18:04:27.515426Z"
     },
     "tags": []
    },
@@ -369,13 +369,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-805af4dcc2a141ea80e4956c383fe6e7\"></div>\n",
+       "<div id=\"altair-viz-3e52ef45933745dbab5d9d25ec69e330\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-805af4dcc2a141ea80e4956c383fe6e7\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-805af4dcc2a141ea80e4956c383fe6e7\");\n",
+       "    if (outputDiv.id !== \"altair-viz-3e52ef45933745dbab5d9d25ec69e330\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-3e52ef45933745dbab5d9d25ec69e330\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -508,11 +508,11 @@
    "id": "9d265060",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-21T21:22:13.275235Z",
-     "iopub.status.busy": "2023-02-21T21:22:13.275012Z",
-     "iopub.status.idle": "2023-02-21T21:23:34.866193Z",
-     "shell.execute_reply": "2023-02-21T21:23:34.865482Z",
-     "shell.execute_reply.started": "2023-02-21T21:22:13.275220Z"
+     "iopub.execute_input": "2023-02-22T18:04:27.737010Z",
+     "iopub.status.busy": "2023-02-22T18:04:27.736793Z",
+     "iopub.status.idle": "2023-02-22T18:05:48.533827Z",
+     "shell.execute_reply": "2023-02-22T18:05:48.532979Z",
+     "shell.execute_reply.started": "2023-02-22T18:04:27.736992Z"
     },
     "tags": []
    },
@@ -522,24 +522,24 @@
      "output_type": "stream",
      "text": [
       "# First fitting site-level model.\n",
-      "# Starting optimization of 1250 parameters at Tue Feb 21 13:22:19 2023.\n",
+      "# Starting optimization of 1250 parameters at Wed Feb 22 10:04:34 2023.\n",
       "        step    time_sec        loss    fit_loss  reg_escape  reg_spread reg_spatial reg_uniqueness reg_uniqueness2 reg_activity reg_hill_coefficient reg_non_neutralized_frac\n",
-      "           0    0.086818       37316       37314           0           0           0              0               0       1.8641                    0                        0\n",
-      "         100      10.387      4831.5      4801.5      16.607           0           0              0               0       7.0297               6.2235                   0.1313\n",
-      "         158      16.239      4750.2      4707.1      30.209           0           0              0               0       6.9343                 5.78                  0.13798\n",
-      "# Successfully finished at Tue Feb 21 13:22:35 2023.\n",
-      "# Starting optimization of 8452 parameters at Tue Feb 21 13:22:35 2023.\n",
+      "           0     0.09393       37316       37314           0           0           0              0               0       1.8641                    0                        0\n",
+      "         100      10.122      4831.5      4801.5      16.607           0           0              0               0       7.0297               6.2235                   0.1313\n",
+      "         158      15.705      4750.2      4707.1      30.209           0           0              0               0       6.9343                 5.78                  0.13798\n",
+      "# Successfully finished at Wed Feb 22 10:04:50 2023.\n",
+      "# Starting optimization of 8452 parameters at Wed Feb 22 10:04:50 2023.\n",
       "        step    time_sec        loss    fit_loss  reg_escape  reg_spread reg_spatial reg_uniqueness reg_uniqueness2 reg_activity reg_hill_coefficient reg_non_neutralized_frac\n",
-      "           0     0.12296      7293.7        7006      274.77  4.5302e-31           0              0               0       6.9343                 5.78                  0.13798\n",
-      "         100      14.908      7049.3      6824.9      202.32      5.7794           0              0               0       8.0756               8.1458                 0.065903\n",
-      "         200      30.337      6956.1      6768.3       169.1      8.0333           0              0               0       7.5603               3.0718                 0.087471\n"
+      "           0      2.1599      7293.7        7006      274.77  4.5302e-31           0              0               0       6.9343                 5.78                  0.13798\n",
+      "         100      17.009      7049.3      6824.9      202.32      5.7794           0              0               0       8.0756               8.1458                 0.065903\n",
+      "         200      31.439      6956.1      6768.3       169.1      8.0333           0              0               0       7.5603               3.0718                 0.087471\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jbloom/polyclonal/polyclonal/polyclonal.py:2699: RuntimeWarning: overflow encountered in power\n",
+      "/home/jbloom/polyclonal/polyclonal/polyclonal.py:2701: RuntimeWarning: overflow encountered in power\n",
       "  1.0 + (numpy.multiply.outer(exp_minus_phi_e_v, cs)) ** nb\n"
      ]
     },
@@ -547,16 +547,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         300      45.044      6923.2      6744.1       156.6      9.7508           0              0               0       7.8821               4.8347                  0.07784\n"
+      "         300      45.019      6923.2      6744.1       156.6      9.7508           0              0               0       7.8821               4.8347                  0.07784\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jbloom/polyclonal/polyclonal/polyclonal.py:2694: RuntimeWarning: overflow encountered in exp\n",
+      "/home/jbloom/polyclonal/polyclonal/polyclonal.py:2696: RuntimeWarning: overflow encountered in exp\n",
       "  exp_minus_phi_e_v = numpy.exp(-phi_e_v)\n",
-      "/home/jbloom/polyclonal/polyclonal/polyclonal.py:2714: RuntimeWarning: invalid value encountered in divide\n",
+      "/home/jbloom/polyclonal/polyclonal/polyclonal.py:2716: RuntimeWarning: invalid value encountered in divide\n",
       "  U_term_partial = (1 - U_vc_e) / U_vc_e / (1 - t)\n"
      ]
     },
@@ -564,8 +564,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         394      59.343      6899.2      6734.7      142.01       11.32           0              0               0        7.637                3.485                 0.081355\n",
-      "# Successfully finished at Tue Feb 21 13:23:34 2023.\n"
+      "         394      58.226      6899.2      6734.7      142.01       11.32           0              0               0        7.637                3.485                 0.081355\n",
+      "# Successfully finished at Wed Feb 22 10:05:48 2023.\n"
      ]
     }
    ],
@@ -607,11 +607,11 @@
    "id": "8e887519",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-21T21:23:34.867598Z",
-     "iopub.status.busy": "2023-02-21T21:23:34.867296Z",
-     "iopub.status.idle": "2023-02-21T21:23:34.884060Z",
-     "shell.execute_reply": "2023-02-21T21:23:34.883476Z",
-     "shell.execute_reply.started": "2023-02-21T21:23:34.867580Z"
+     "iopub.execute_input": "2023-02-22T18:05:48.537341Z",
+     "iopub.status.busy": "2023-02-22T18:05:48.537130Z",
+     "iopub.status.idle": "2023-02-22T18:05:48.556016Z",
+     "shell.execute_reply": "2023-02-22T18:05:48.555444Z",
+     "shell.execute_reply.started": "2023-02-22T18:05:48.537311Z"
     },
     "tags": []
    },
@@ -687,11 +687,11 @@
    "id": "d7b168a4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-21T21:23:34.885125Z",
-     "iopub.status.busy": "2023-02-21T21:23:34.884849Z",
-     "iopub.status.idle": "2023-02-21T21:23:34.887720Z",
-     "shell.execute_reply": "2023-02-21T21:23:34.887175Z",
-     "shell.execute_reply.started": "2023-02-21T21:23:34.885105Z"
+     "iopub.execute_input": "2023-02-22T18:05:48.558387Z",
+     "iopub.status.busy": "2023-02-22T18:05:48.558248Z",
+     "iopub.status.idle": "2023-02-22T18:05:48.561055Z",
+     "shell.execute_reply": "2023-02-22T18:05:48.560522Z",
+     "shell.execute_reply.started": "2023-02-22T18:05:48.558373Z"
     },
     "tags": []
    },
@@ -715,11 +715,11 @@
    "id": "f7db9fc1-1a45-403e-b504-6cbc02f68af7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-21T21:23:34.888804Z",
-     "iopub.status.busy": "2023-02-21T21:23:34.888430Z",
-     "iopub.status.idle": "2023-02-21T21:23:34.937926Z",
-     "shell.execute_reply": "2023-02-21T21:23:34.937431Z",
-     "shell.execute_reply.started": "2023-02-21T21:23:34.888783Z"
+     "iopub.execute_input": "2023-02-22T18:05:48.563370Z",
+     "iopub.status.busy": "2023-02-22T18:05:48.563185Z",
+     "iopub.status.idle": "2023-02-22T18:05:48.608647Z",
+     "shell.execute_reply": "2023-02-22T18:05:48.608042Z",
+     "shell.execute_reply.started": "2023-02-22T18:05:48.563354Z"
     },
     "tags": []
    },
@@ -831,11 +831,11 @@
    "id": "1a9d6f5d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-21T21:23:34.938818Z",
-     "iopub.status.busy": "2023-02-21T21:23:34.938610Z",
-     "iopub.status.idle": "2023-02-21T21:23:36.807675Z",
-     "shell.execute_reply": "2023-02-21T21:23:36.807149Z",
-     "shell.execute_reply.started": "2023-02-21T21:23:34.938801Z"
+     "iopub.execute_input": "2023-02-22T18:05:48.611201Z",
+     "iopub.status.busy": "2023-02-22T18:05:48.611055Z",
+     "iopub.status.idle": "2023-02-22T18:05:50.500580Z",
+     "shell.execute_reply": "2023-02-22T18:05:50.499676Z",
+     "shell.execute_reply.started": "2023-02-22T18:05:48.611186Z"
     },
     "tags": []
    },
@@ -844,13 +844,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-09216129bf27415db7f72680c2ea1619\"></div>\n",
+       "<div id=\"altair-viz-55e846efe97c4502bd371cebd1e161f9\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-09216129bf27415db7f72680c2ea1619\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-09216129bf27415db7f72680c2ea1619\");\n",
+       "    if (outputDiv.id !== \"altair-viz-55e846efe97c4502bd371cebd1e161f9\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-55e846efe97c4502bd371cebd1e161f9\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -938,11 +938,11 @@
    "id": "aeff75ca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-21T21:23:36.809330Z",
-     "iopub.status.busy": "2023-02-21T21:23:36.808818Z",
-     "iopub.status.idle": "2023-02-21T21:23:36.872033Z",
-     "shell.execute_reply": "2023-02-21T21:23:36.871354Z",
-     "shell.execute_reply.started": "2023-02-21T21:23:36.809291Z"
+     "iopub.execute_input": "2023-02-22T18:05:50.504165Z",
+     "iopub.status.busy": "2023-02-22T18:05:50.503915Z",
+     "iopub.status.idle": "2023-02-22T18:05:50.562062Z",
+     "shell.execute_reply": "2023-02-22T18:05:50.561409Z",
+     "shell.execute_reply.started": "2023-02-22T18:05:50.504147Z"
     },
     "tags": []
    },
@@ -1011,12 +1011,15 @@
        "4   443                              7.8"
       ]
      },
+     "execution_count": 10,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "display(\n",
+    "#NBVAL_IGNORE_OUTPUT\n",
+    "\n",
+    "top_sites = (\n",
     "    model.mut_escape_df.query(\"times_seen >= @min_times_seen\")\n",
     "    .sort_values(\"escape\", ascending=False)\n",
     "    .groupby(\"site\", as_index=False, sort=False)\n",
@@ -1024,16 +1027,29 @@
     "    .rename(columns={\"escape\": \"largest_mutation_escape_at_site\"})\n",
     "    .head(n=5)\n",
     "    .round(1)\n",
-    ")"
+    ")\n",
+    "\n",
+    "top_sites"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c05b9029-6c4b-4c14-88cd-ed997a32b84a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-02-22T18:05:50.563046Z",
+     "iopub.status.busy": "2023-02-22T18:05:50.562787Z",
+     "iopub.status.idle": "2023-02-22T18:05:50.566255Z",
+     "shell.execute_reply": "2023-02-22T18:05:50.565638Z",
+     "shell.execute_reply.started": "2023-02-22T18:05:50.563030Z"
+    },
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "assert set(top_sites[\"site\"]) == {447, 444, 441, 442, 443}"
+   ]
   }
  ],
  "metadata": {
