--- a/notebooks/fit_2epitope.ipynb
+++ b/notebooks/fit_2epitope.ipynb
@@ -1263,13 +1263,10 @@
     "    model_df.columns = [\"mutation\", f\"{mname} epitope A\", f\"{mname} epitope B\"]\n",
     "    mut_escape = mut_escape.merge(model_df, on=\"mutation\", validate=\"one_to_one\")\n",
     "\n",
-    "mut_escape_corr = (\n",
-    "    mut_escape.corr(numeric_only=True)\n",
-    "    .drop(\n",
-    "        columns=[c for c in mut_escape.columns if not c.startswith(\"true\")],\n",
-    "        index=[c for c in mut_escape.columns if c.startswith(\"true\")],\n",
-    "        errors=\"ignore\",\n",
-    "    )\n",
+    "mut_escape_corr = mut_escape.corr(numeric_only=True).drop(\n",
+    "    columns=[c for c in mut_escape.columns if not c.startswith(\"true\")],\n",
+    "    index=[c for c in mut_escape.columns if c.startswith(\"true\")],\n",
+    "    errors=\"ignore\",\n",
     ")\n",
     "\n",
     "display(mut_escape_corr.round(2))\n",
