--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -115,7 +115,7 @@
    "source": [
     "### Regularization of epitope uniqueness$^2$\n",
     "This is a second regularization to ensure epitopes contain largely unique sites, but this one operates on the **squared** product of escape at a site, and so will more strongly penalize very large escape at same site, but less penalize weak shared constraint:\n",
-    "$$ R_{\\rm{uniquness}^2} = \\lambda_{\\rm{uniqueness}^2} \\sum_{i} \\sum_{j > i} \\sum_{k} \\left(\\sum_{m' \\in S_{k}} \\beta_{m',i}^2\\right)\\left(\\sum_{m' \\in S_{k}} \\beta_{m',j}^2\\right)$$\n",
+    "$$ R_{\\rm{uniqueness}^2} = \\lambda_{\\rm{uniqueness}^2} \\sum_{i} \\sum_{j > i} \\sum_{k} \\left(\\sum_{m' \\in S_{k}} \\beta_{m',i}^2\\right)\\left(\\sum_{m' \\in S_{k}} \\beta_{m',j}^2\\right)$$\n",
     "where $i$, $j$ range over all epitopes $E$, $k$ is the site index, and $m' \\in S_{k}$ represents all mutations at site $k$."
    ]
   },
@@ -136,6 +136,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "250a0349-831d-470f-af41-6230d321062d",
+   "metadata": {},
+   "source": [
+    "### Regularization of Hill coefficients\n",
+    "We regularize the Hill coefficients $n_e$ to be close to one using the regularization, using a penalty that essentially operates on the log of $n_e$ so the values are bounded by 0 and infinity:\n",
+    "$$\n",
+    "R_{\\rm{Hill coefficient}} = \\lambda_{\\rm{Hill coefficient}} \\left(\\log n_e\\right)^2\n",
+    "$$\n",
+    "where $\\lambda_{\\rm{Hill coefficient}}$ is the strength of the regularization.\n",
+    "Note that it is important that the Hill coefficients be fairly strongly normalized.\n",
+    "For instance, a value of $\\lambda_{\\rm{Hill coefficient}} = 50$ creates a penalty of 24 when $n_e = 0.5$ or $n_e = 2$, and a penalty of 8.2 when $n_e = 1.5$ or $n_e = 1 / 1.5$.\n",
+    "Note also that the minimization bounds $n_e > 0$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe23107a-a7d0-40a9-8162-617cdacdb277",
+   "metadata": {},
+   "source": [
+    "### Regularization of non-neutralizable fraction\n",
+    "We regularize the non-neutralizable fraction $t_e$ to be close to zero, and also during the minimization set a bound so it cannot go below zero or above one.\n",
+    "The regularization is:\n",
+    "$$\n",
+    "R_{\\rm{non-neutralized-frac}}\n",
+    "=\n",
+    "\\lambda_{\\rm{non-neutralized-frac}} t_e^2\n",
+    "$$\n",
+    "where $\\lambda_{\\rm{non-neutralized-frac}}$ is the strength of the regularization.\n",
+    "Note that the regularization should be fairly strong.\n",
+    "For instance, value of $\\lambda_{\\rm{non-neutralized-frac}} = 1000$ creates a penalty of 10 when $t_e = 0.1$ and a penalty of 62.5 when $t_e = 0.25$.\n",
+    "Note also that the minimization bounds $1 \\ge t_e \\ge 0$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bd6e0904-7d92-4996-a588-f957192311e9",
    "metadata": {},
    "source": [
@@ -149,14 +184,30 @@
     "\\frac{\\partial L}{\\partial \\beta_{m,e}} =\n",
     "\\sum_{v,c}\n",
     "\\frac{r_v\\left(c\\right)}{h_{\\delta}\\left(r_v\\left(c\\right)\\right) + \\delta}\n",
-    "p_v\\left(c\\right) \\left[1 - U_e\\left(v, c\\right)\\right] b\\left(v\\right)_m\n",
+    "p_v\\left(c\\right) \\frac{n_e}{1 - t_e} \\frac{\\left[U_e\\left(v, c\\right) - t_e\\right]\\left[1 - U_e\\left(v, c\\right)\\right]}{U_e\\left(v, c\\right)} b\\left(v\\right)_m\n",
     "$$\n",
     "\n",
     "$$\n",
     "\\frac{\\partial L}{\\partial a_{\\rm{wt},e}} =\n",
     "-\\sum_{v,c}\n",
     "\\frac{r_v\\left(c\\right)}{h_{\\delta}\\left(r_v\\left(c\\right)\\right) + \\delta}\n",
-    "p_v\\left(c\\right) \\left[1 - U_e\\left(v, c\\right)\\right]\n",
+    "p_v\\left(c\\right) \\frac{n_e}{1 - t_e} \\frac{\\left[U_e\\left(v, c\\right) - t_e\\right]\\left[1 - U_e\\left(v, c\\right)\\right]}{U_e\\left(v, c\\right)}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial L}{\\partial n_e}\n",
+    "=\n",
+    "\\sum_{v,c}\n",
+    "\\frac{r_v\\left(c\\right)}{h_{\\delta}\\left(r_v\\left(c\\right)\\right) + \\delta}\n",
+    "p_v\\left(c\\right) \\frac{\\left(\\phi_e\\left(v\\right) - \\ln c\\right)}{\\left(1 - t_e\\right)}\n",
+    "\\frac{\\left[1 - U_e\\left(v, c\\right)\\right]\\left[U_e\\left(v, c\\right) - t_e\\right]}{U_e\\left(v, c\\right)}.\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial L}{\\partial t_e} =\n",
+    "\\frac{r_v\\left(c\\right)}{h_{\\delta}\\left(r_v\\left(c\\right)\\right) + \\delta}\n",
+    "\\left(\\frac{p_v\\left(c\\right)}{U_e\\left(v, c\\right)}\\right)\n",
+    "\\frac{1 - U_e\\left(v, c\\right)}{1 - t_e}\n",
     "$$\n",
     "\n",
     "See below for how the sub-components that lead to these were calculated."
@@ -193,7 +244,10 @@
     "\n",
     "Next, note\n",
     "$$\n",
-    "\\frac{\\partial U_e\\left(v, c\\right)}{\\partial \\beta_{m,e}} = \\frac{\\partial \\phi_e\\left(v\\right)}{\\partial \\beta_{m,e}}\\frac{c \\exp\\left(-\\phi_e\\left(v\\right)\\right) }{\\left[1 + c \\exp\\left(-\\phi_e\\left(v\\right)\\right)\\right]^2} = \\frac{\\partial \\phi_e\\left(v\\right)}{\\partial \\beta_{m,e}} U_e\\left(v, c\\right) \\left[1 - U_e\\left(v, c\\right)\\right]\n",
+    "\\frac{\\partial U_e\\left(v, c\\right)}{\\partial \\beta_{m,e}} = \\frac{\\partial \\phi_e\\left(v\\right)}{\\partial \\beta_{m,e}}\n",
+    "\\frac{n \\left(1 - t_e\\right) \\left[c \\exp\\left(-\\phi_e\\left(v\\right)\\right)\\right]^{n_e}}{\\left[1 + \\left[c \\exp\\left(-\\phi_e\\left(v\\right)\\right)\\right]^{n_e}\\right]^2}\n",
+    "=\n",
+    "\\frac{\\partial \\phi_e\\left(v\\right)}{\\partial \\beta_{m,e}} \\frac{n_e}{1 - t_e}\\left[U_e\\left(v, c\\right) - t_e\\right] \\left[1 - U_e\\left(v, c\\right)\\right]\n",
     "$$\n",
     "where the last step uses the simplification [here](https://math.stackexchange.com/a/1225116).\n",
     "\n",
@@ -202,7 +256,9 @@
     "\n",
     "Putting it all together, we have:\n",
     "$$\n",
-    "\\frac{\\partial p_v\\left(c\\right)}{\\partial \\beta_{m,e}} = p_v\\left(c\\right) \\left[1 - U_e\\left(v, c\\right)\\right] b\\left(v\\right)_m.\n",
+    "\\frac{\\partial p_v\\left(c\\right)}{\\partial \\beta_{m,e}}\n",
+    "=\n",
+    "p_v\\left(c\\right) \\frac{n_e}{1 - t_e} \\frac{\\left[U_e\\left(v, c\\right) - t_e\\right]\\left[1 - U_e\\left(v, c\\right)\\right]}{U_e\\left(v, c\\right)} b\\left(v\\right)_m.\n",
     "$$"
    ]
   },
@@ -212,9 +268,40 @@
    "metadata": {},
    "source": [
     "#### Calculating $\\frac{\\partial p_v\\left(c\\right)}{\\partial a_{\\rm{wt},e}}$\n",
+    "\n",
     "The only difference from above is the sign, so:\n",
     "$$\n",
-    "\\frac{\\partial p_v\\left(c\\right)}{\\partial a_{\\rm{wt},e}} = -p_v\\left(c\\right) \\left[1 - U_e\\left(v, c\\right)\\right].\n",
+    "\\frac{\\partial p_v\\left(c\\right)}{\\partial a_{\\rm{wt},e}}\n",
+    "=\n",
+    "-p_v\\left(c\\right) \\frac{n_e}{1 - t_e} \\frac{\\left[U_e\\left(v, c\\right) - t_e\\right]\\left[1 - U_e\\left(v, c\\right)\\right]}{U_e\\left(v, c\\right)}.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc6cfe1f-6f02-4977-9aef-d5bc6576277b",
+   "metadata": {},
+   "source": [
+    "#### Calculating $\\frac{\\partial U_e\\left(v, c\\right)}{\\partial n_e}$\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial U_e\\left(v, c\\right)}{\\partial n_e}\n",
+    "=\n",
+    "\\frac{\\left(\\phi_e\\left(v\\right) - \\ln c\\right)}{\\left(1 - t_e\\right)} \\left[1 - U_e\\left(v, c\\right)\\right]\\left[U_e\\left(v, c\\right) - t_e\\right].\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d64ef479-cfd6-40d4-99bd-785d5f420665",
+   "metadata": {},
+   "source": [
+    "#### Calculating $\\frac{\\partial U_e\\left(v, c\\right)}{\\partial t_e}$\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial U_e\\left(v, c\\right)}{\\partial t_e}\n",
+    "=\n",
+    "\\frac{1 - U_e\\left(v, c\\right)}{1 - t_e}.\n",
     "$$"
    ]
   },
@@ -319,6 +406,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8f855dae-268e-462d-9b15-0b5e87147b3d",
+   "metadata": {},
+   "source": [
+    "#### Calculating $\\frac{\\partial R_{\\rm{Hill coefficient}}}{\\partial n_e}$\n",
+    "$$\n",
+    "\\frac{\\partial R_{\\rm{Hill coefficient}}}{\\partial n_e}\n",
+    "=\n",
+    "\\frac{2\\lambda_{\\rm{Hill coefficient}} \\left(\\log n_e\\right)}{n_e}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61aead7b-e6eb-4cb1-af77-49aee18f2c4a",
+   "metadata": {},
+   "source": [
+    "#### Calculating $\\frac{\\partial R_{\\rm{non-neutralized-frac}}}{\\partial t_e}$\n",
+    "$$\n",
+    "\\frac{\\partial R_{\\rm{non-neutralized-frac}}}{\\partial t_e}\n",
+    "=\n",
+    "2 \\lambda_{\\rm{non-neutralized-frac}} t_e\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "55966e74-705d-4073-a84a-dd559cd68a17",
    "metadata": {},
    "source": [
@@ -355,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
