add `NBVAL_IGNORE_OUTPUT` to pass tests

--- a/notebooks/real_LyCoV1404.ipynb
+++ b/notebooks/real_LyCoV1404.ipynb
@@ -1024,6 +1024,8 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
+    "\n",
     "model.mut_escape_plot(\n",
     "    df_to_merge=muteffects,\n",
     "    addtl_tooltip_stats=[\"reference_site\"],\n",
@@ -1126,6 +1128,8 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
+    "\n",
     "model.mut_escape_plot(\n",
     "    df_to_merge=muteffects,\n",
     "    addtl_tooltip_stats=[\"reference_site\"],\n",
