--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -142,11 +142,16 @@
     "### Regularization of Hill coefficients\n",
     "We regularize the Hill coefficients $n_e$ to be close to one using the regularization, using a penalty that essentially operates on the log of $n_e$ so the values are bounded by 0 and infinity:\n",
     "$$\n",
-    "R_{\\rm{Hill coefficient}} = \\lambda_{\\rm{Hill coefficient}} \\left(\\log n_e\\right)^2\n",
+    "R_{\\rm{Hill coefficient}}\n",
+    "=\n",
+    "\\begin{cases}\n",
+    "\\lambda_{\\rm{Hill coefficient}} n_e^2 & \\rm{if\\;} n_e \\ge 1 \\\\\n",
+    "\\lambda_{\\rm{Hill coefficient}} \\left(1 - 1/n_e\\right)^2 & \\rm{if\\;} n_e < 1 \\\\\n",
+    "\\end{cases}\n",
     "$$\n",
     "where $\\lambda_{\\rm{Hill coefficient}}$ is the strength of the regularization.\n",
     "Note that it is important that the Hill coefficients be fairly strongly normalized.\n",
-    "For instance, a value of $\\lambda_{\\rm{Hill coefficient}} = 50$ creates a penalty of 24 when $n_e = 0.5$ or $n_e = 2$, and a penalty of 8.2 when $n_e = 1.5$ or $n_e = 1 / 1.5$.\n",
+    "For instance, a value of $\\lambda_{\\rm{Hill coefficient}} = 50$ creates a penalty of 200 when $n_e = 1/3$ or $n_e = 3$, a penalty of 50 when $n_e = 1/2$ or $n_e = 2$, and a penalty of 12.5 when $n_e = 1.5$ or $n_e = 1 / 1.5$.\n",
     "Note also that the minimization bounds $n_e > 0$."
    ]
   },
@@ -413,7 +418,10 @@
     "$$\n",
     "\\frac{\\partial R_{\\rm{Hill coefficient}}}{\\partial n_e}\n",
     "=\n",
-    "\\frac{2\\lambda_{\\rm{Hill coefficient}} \\left(\\log n_e\\right)}{n_e}\n",
+    "\\begin{cases}\n",
+    "2\\left(x - 1\\right) & \\rm{if\\;} x \\ge 1 \\\\\n",
+    "2 / x^2 - 2 / x^3 & \\rm{if\\;} x < 1 \\\\\n",
+    "\\end{cases}\n",
     "$$"
    ]
   },
